--- a/css/onestopVancouver.css
+++ b/css/onestopVancouver.css
@@ -8,7 +8,7 @@
     float: left;
     max-width: 250px;
     min-width: 250px;
-    height: auto;
+    height: 100vh;
     background-color: #FFFFFF;
     overflow: scroll;
     transition: all 350ms;
@@ -18,13 +18,6 @@
 
 #sidebar.active {
     margin-left: -250px;
-}
-
-div.screen {
-    margin: 0 auto;
-    width: 360px;
-    height: 640px;
-    background: linear-gradient(#FBD36D, #FFFFFF);
 }
 
 .title {
@@ -84,7 +77,7 @@ div.screen {
     z-index: 998;
     margin: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 body {
