--- a/css/productpage.css
+++ b/css/productpage.css
@@ -1,3 +1,6 @@
+#sidebar {
+    height:auto;
+}
 p{ /* The product descriptions */
         text-align: center;
 }
